[package]
name = "bevy_ecs"
version = "0.3.0"
edition = "2018"
authors = [
    "Bevy Contributors <bevyengine@gmail.com>",
    "Carter Anderson <mcanders1@gmail.com>",
]
description = "Bevy Engine's entity component system"
homepage = "https://bevyengine.org"
repository = "https://github.com/bevyengine/bevy"
license = "Apache-2.0"
keywords = ["ecs", "game", "bevy"]
categories = ["game-engines", "data-structures"]

[features]
#default = ["profile-with-optick"]
default = ["profile-with-superluminal"]
trace = []
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]

[dependencies]
bevy_tasks = { path = "../bevy_tasks", version = "0.3.0" }
bevy_utils = { path = "../bevy_utils", version = "0.3.0" }
bevy_ecs_macros = { path = "macros", version = "0.3.0" }
rand = "0.7.3"
serde = "1.0"
thiserror = "1.0"
fixedbitset = "0.3.1"
bitflags = "1.2.1"
downcast-rs = "1.2.0"
parking_lot = "0.11.0"
lazy_static = { version = "1.4.0" }

# profiling
profiling = "0.1"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false
required-features = ["macros"]
